New: Minimal embed examples included (style removed)

--- a/index.html
+++ b/index.html
@@ -5,17 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<style>
-article.story-article {
-    max-width: 615px;
-    margin: auto;
-}
-
-hr {
-    margin: 50px 0;
-}
-</style>
-<article class="story-article">
+<article style="max-width: 615px; margin: auto">
     <!-- facebook -->
     <iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2Funiladmag%2Fvideos%2F3191766804384894%2F&show_text=false&width=380&t=0" width="380" height="476" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
 
