New: Reformatted code

--- a/index.html
+++ b/index.html
@@ -7,19 +7,32 @@
 <body>
 <article style="max-width: 615px; margin: auto">
     <!-- facebook -->
-    <iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2Funiladmag%2Fvideos%2F3191766804384894%2F&show_text=false&width=380&t=0" width="380" height="476" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
+    <iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2Funiladmag%2Fvideos%2F3191766804384894%2F&show_text=false&width=380&t=0"
+            width="380" height="476" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+            allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
+            allowFullScreen="true"></iframe>
 
     <!-- twitter -->
     <blockquote class="twitter-tweet">
-        <p lang="de" dir="ltr">Die Krone hat ein kurzes Gespräch mit dem Bundeskanzler zu seiner Einvernahme beim Landesgericht am Rande der <a href="https://twitter.com/hashtag/UNGA?src=hash&amp;ref_src=twsrc%5Etfw">#UNGA</a> in New York. Der Kanzler musste dann aber leider weg. <a href="https://t.co/KBsJ5Us3ng">https://t.co/KBsJ5Us3ng</a> <a href="https://t.co/XqTuQO8hUK">pic.twitter.com/XqTuQO8hUK</a></p>
-        &mdash; Martin Thür (@MartinThuer) <a href="https://twitter.com/MartinThuer/status/1440759523266813952?ref_src=twsrc%5Etfw">September 22, 2021</a>
+        <p lang="de" dir="ltr">Die Krone hat ein kurzes Gespräch mit dem Bundeskanzler zu seiner Einvernahme beim
+            Landesgericht am Rande der <a
+                    href="https://twitter.com/hashtag/UNGA?src=hash&amp;ref_src=twsrc%5Etfw">#UNGA</a> in New York. Der
+            Kanzler musste dann aber leider weg. <a href="https://t.co/KBsJ5Us3ng">https://t.co/KBsJ5Us3ng</a> <a
+                    href="https://t.co/XqTuQO8hUK">pic.twitter.com/XqTuQO8hUK</a></p>
+        &mdash; Martin Thür (@MartinThuer) <a
+            href="https://twitter.com/MartinThuer/status/1440759523266813952?ref_src=twsrc%5Etfw">September 22, 2021</a>
     </blockquote>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
     <!-- instagram -->
-    <blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CUDEBv-o4od/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="13" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
+    <blockquote class="instagram-media" data-instgrm-captioned
+                data-instgrm-permalink="https://www.instagram.com/p/CUDEBv-o4od/?utm_source=ig_embed&amp;utm_campaign=loading"
+                data-instgrm-version="13"
+                style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
         <div style="padding:16px;">
-            <a href="https://www.instagram.com/p/CUDEBv-o4od/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+            <a href="https://www.instagram.com/p/CUDEBv-o4od/?utm_source=ig_embed&amp;utm_campaign=loading"
+               style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;"
+               target="_blank">
                 <div style=" display: flex; flex-direction: row; align-items: center;">
                     <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
                     <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
@@ -29,7 +42,8 @@
                 </div>
                 <div style="padding: 19% 0;"></div>
                 <div style="display:block; height:50px; margin:0 auto 12px; width:50px;">
-                    <svg width="50px" height="50px" viewBox="0 0 60 60" version="1.1" xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink">
+                    <svg width="50px" height="50px" viewBox="0 0 60 60" version="1.1"
+                         xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink">
                         <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                             <g transform="translate(-511.000000, -20.000000)" fill="#000000">
                                 <g>
@@ -40,7 +54,9 @@
                     </svg>
                 </div>
                 <div style="padding-top: 8px;">
-                    <div style=" color:#3897f0; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:550; line-height:18px;"> Sieh dir diesen Beitrag auf Instagram an</div>
+                    <div style=" color:#3897f0; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:550; line-height:18px;">
+                        Sieh dir diesen Beitrag auf Instagram an
+                    </div>
                 </div>
                 <div style="padding: 12.5% 0;"></div>
                 <div style="display: flex; flex-direction: row; margin-bottom: 14px; align-items: center;">
@@ -64,38 +80,63 @@
                     <div style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; width: 144px;"></div>
                 </div>
             </a>
-            <p style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; line-height:17px; margin-bottom:0; margin-top:8px; overflow:hidden; padding:8px 0 7px; text-align:center; text-overflow:ellipsis; white-space:nowrap;"><a href="https://www.instagram.com/p/CUDEBv-o4od/?utm_source=ig_embed&amp;utm_campaign=loading" style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px; text-decoration:none;" target="_blank">Ein Beitrag geteilt von Cristiano Ronaldo (@cristiano)</a></p>
+            <p style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; line-height:17px; margin-bottom:0; margin-top:8px; overflow:hidden; padding:8px 0 7px; text-align:center; text-overflow:ellipsis; white-space:nowrap;">
+                <a href="https://www.instagram.com/p/CUDEBv-o4od/?utm_source=ig_embed&amp;utm_campaign=loading"
+                   style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px; text-decoration:none;"
+                   target="_blank">Ein Beitrag geteilt von Cristiano Ronaldo (@cristiano)</a></p>
         </div>
     </blockquote>
     <script async src="//www.instagram.com/embed.js"></script>
 
     <!-- pinterest -->
-    <iframe src="https://assets.pinterest.com/ext/embed.html?id=473652085815926486" height="564" width="345" frameborder="0" scrolling="no" ></iframe><iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/308686961&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+    <iframe src="https://assets.pinterest.com/ext/embed.html?id=473652085815926486" height="564" width="345"
+            frameborder="0" scrolling="no"></iframe>
+    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"
+            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/308686961&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 
     <!-- soundcloud -->
-    <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/steevlacy" title="Steve Lacy" target="_blank" style="color: #cccccc; text-decoration: none;">Steve Lacy</a> · <a href="https://soundcloud.com/steevlacy/3-dark-red" title="Dark Red" target="_blank" style="color: #cccccc; text-decoration: none;">Dark Red</a></div>
+    <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+        <a href="https://soundcloud.com/steevlacy" title="Steve Lacy" target="_blank"
+           style="color: #cccccc; text-decoration: none;">Steve Lacy</a> · <a
+            href="https://soundcloud.com/steevlacy/3-dark-red" title="Dark Red" target="_blank"
+            style="color: #cccccc; text-decoration: none;">Dark Red</a></div>
 
     <!-- spotify -->
-    <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1E35dgo3JpZ5km" width="100%" height="80" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe><iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="450" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/at/playlist/hyped/pl.914196c8783d46a5ba46f38eda448a43"></iframe>
+    <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1E35dgo3JpZ5km" width="100%" height="80"
+            allowfullscreen=""
+            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+    <iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="450"
+            style="width:100%;max-width:660px;overflow:hidden;background:transparent;"
+            sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
+            src="https://embed.music.apple.com/at/playlist/hyped/pl.914196c8783d46a5ba46f38eda448a43"></iframe>
 
     <!-- google maps -->
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1920.9889518837444!2d12.645483208182013!3d47.0592613868166!2m3!1f54.00000000000015!2f76.13715763923128!3f0!3m2!1i1024!2i768!4f35!3m3!1m2!1s0x477712c196ca78c5%3A0x77a72d8b64cbc137!2sGro%C3%9Fglockner!5e1!3m2!1sde!2sat!4v1632341077030!5m2!1sde!2sat" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1920.9889518837444!2d12.645483208182013!3d47.0592613868166!2m3!1f54.00000000000015!2f76.13715763923128!3f0!3m2!1i1024!2i768!4f35!3m3!1m2!1s0x477712c196ca78c5%3A0x77a72d8b64cbc137!2sGro%C3%9Fglockner!5e1!3m2!1sde!2sat!4v1632341077030!5m2!1sde!2sat"
+            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
     <!-- tiktok -->
-    <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@diego_forn22/video/6981095853092015366" data-video-id="6981095853092015366" style="max-width: 605px;min-width: 325px;" >
+    <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@diego_forn22/video/6981095853092015366"
+                data-video-id="6981095853092015366" style="max-width: 605px;min-width: 325px;">
         <section>
             <a target="_blank" title="@diego_forn22" href="https://www.tiktok.com/@diego_forn22">@diego_forn22</a>
-            <p>Lego snake part.2 🐍🧱<a title="viral" target="_blank" href="https://www.tiktok.com/tag/viral">#viral</a> <a title="fypシ" target="_blank" href="https://www.tiktok.com/tag/fyp%E3%82%B7">#fypシ</a></p>
-            <a target="_blank" title="♬ walk it talk it - favsoundds " href="https://www.tiktok.com/music/walk-it-talk-it-6962615408344386309">♬ walk it talk it - favsoundds </a>
+            <p>Lego snake part.2 🐍🧱<a title="viral" target="_blank" href="https://www.tiktok.com/tag/viral">#viral</a>
+                <a title="fypシ" target="_blank" href="https://www.tiktok.com/tag/fyp%E3%82%B7">#fypシ</a></p>
+            <a target="_blank" title="♬ walk it talk it - favsoundds "
+               href="https://www.tiktok.com/music/walk-it-talk-it-6962615408344386309">♬ walk it talk it -
+                favsoundds </a>
         </section>
     </blockquote>
     <script async src="https://www.tiktok.com/embed.js"></script>
 
     <!-- youtube -->
-    <iframe title="YouTube video player" src="https://www.youtube.com/embed/8JclYxF-8Hw?enablejsapi=1" width="560" height="315" frameborder="0" allowfullscreen="allowfullscreen" data-publishing-video-id="a9f69f55-8547-4043-8bad-e8d310d223dd" class="contentgarden-video-youtube-iframe" id="contentgarden-video-youtube-iframe-a9f69f55-8547-4043-8bad-e8d310d223dd"></iframe>
+    <iframe title="YouTube video player" src="https://www.youtube.com/embed/8JclYxF-8Hw?enablejsapi=1" width="560"
+            height="315" frameborder="0" allowfullscreen="allowfullscreen"
+            data-publishing-video-id="a9f69f55-8547-4043-8bad-e8d310d223dd" class="contentgarden-video-youtube-iframe"
+            id="contentgarden-video-youtube-iframe-a9f69f55-8547-4043-8bad-e8d310d223dd"></iframe>
 
     <!-- vimeo -->
-    <iframe src="https://player.vimeo.com/video/445394992?h=de3caefe1d&amp;byline=0&amp;portrait=0" width="640" height="360" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+    <iframe src="https://player.vimeo.com/video/445394992?h=de3caefe1d&amp;byline=0&amp;portrait=0" width="640"
+            height="360" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
 </article>
 </body>
 </html>
