--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
     <!-- pinterest -->
     <iframe src="https://assets.pinterest.com/ext/embed.html?id=473652085815926486" height="564" width="345"
             frameborder="0" scrolling="no"></iframe>
-    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"
-            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/308686961&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 
     <!-- soundcloud -->
+    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"
+            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/308686961&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
     <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
         <a href="https://soundcloud.com/steevlacy" title="Steve Lacy" target="_blank"
            style="color: #cccccc; text-decoration: none;">Steve Lacy</a> · <a
@@ -105,6 +105,8 @@
     <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1E35dgo3JpZ5km" width="100%" height="80"
             allowfullscreen=""
             allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+
+    <!-- apple music -->
     <iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="450"
             style="width:100%;max-width:660px;overflow:hidden;background:transparent;"
             sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
