New: Embeds ordered based on complexity

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Minimalistic Embed Demo</title>
 </head>
 <body>
 <article style="max-width: 615px; margin: auto">
@@ -11,6 +11,46 @@
             width="380" height="476" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
             allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
             allowFullScreen="true"></iframe>
+
+    <!-- pinterest -->
+    <iframe src="https://assets.pinterest.com/ext/embed.html?id=473652085815926486" height="564" width="345"
+            frameborder="0" scrolling="no"></iframe>
+
+    <!-- spotify -->
+    <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1E35dgo3JpZ5km" width="100%" height="80"
+            allowfullscreen=""
+            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+
+    <!-- apple music -->
+    <iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="450"
+            style="width:100%;max-width:660px;overflow:hidden;background:transparent;"
+            sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
+            src="https://embed.music.apple.com/at/playlist/hyped/pl.914196c8783d46a5ba46f38eda448a43"></iframe>
+
+    <!-- google maps -->
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1920.9889518837444!2d12.645483208182013!3d47.0592613868166!2m3!1f54.00000000000015!2f76.13715763923128!3f0!3m2!1i1024!2i768!4f35!3m3!1m2!1s0x477712c196ca78c5%3A0x77a72d8b64cbc137!2sGro%C3%9Fglockner!5e1!3m2!1sde!2sat!4v1632341077030!5m2!1sde!2sat"
+            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+    <!-- youtube -->
+    <iframe title="YouTube video player" src="https://www.youtube.com/embed/8JclYxF-8Hw?enablejsapi=1" width="560"
+            height="315" frameborder="0" allowfullscreen="allowfullscreen"
+            data-publishing-video-id="a9f69f55-8547-4043-8bad-e8d310d223dd" class="contentgarden-video-youtube-iframe"
+            id="contentgarden-video-youtube-iframe-a9f69f55-8547-4043-8bad-e8d310d223dd"></iframe>
+
+    <!-- vimeo -->
+    <iframe src="https://player.vimeo.com/video/445394992?h=de3caefe1d&amp;byline=0&amp;portrait=0" width="640"
+            height="360" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+
+    <!-- EMBEDS BELOW CONSIST OF MULTIPLE TAGS! -->
+
+    <!-- soundcloud -->
+    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"
+            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/308686961&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+    <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+        <a href="https://soundcloud.com/steevlacy" title="Steve Lacy" target="_blank"
+           style="color: #cccccc; text-decoration: none;">Steve Lacy</a> · <a
+            href="https://soundcloud.com/steevlacy/3-dark-red" title="Dark Red" target="_blank"
+            style="color: #cccccc; text-decoration: none;">Dark Red</a></div>
 
     <!-- twitter -->
     <blockquote class="twitter-tweet">
@@ -88,34 +128,6 @@
     </blockquote>
     <script async src="//www.instagram.com/embed.js"></script>
 
-    <!-- pinterest -->
-    <iframe src="https://assets.pinterest.com/ext/embed.html?id=473652085815926486" height="564" width="345"
-            frameborder="0" scrolling="no"></iframe>
-
-    <!-- soundcloud -->
-    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"
-            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/308686961&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-    <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-        <a href="https://soundcloud.com/steevlacy" title="Steve Lacy" target="_blank"
-           style="color: #cccccc; text-decoration: none;">Steve Lacy</a> · <a
-            href="https://soundcloud.com/steevlacy/3-dark-red" title="Dark Red" target="_blank"
-            style="color: #cccccc; text-decoration: none;">Dark Red</a></div>
-
-    <!-- spotify -->
-    <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1E35dgo3JpZ5km" width="100%" height="80"
-            allowfullscreen=""
-            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-
-    <!-- apple music -->
-    <iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="450"
-            style="width:100%;max-width:660px;overflow:hidden;background:transparent;"
-            sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
-            src="https://embed.music.apple.com/at/playlist/hyped/pl.914196c8783d46a5ba46f38eda448a43"></iframe>
-
-    <!-- google maps -->
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1920.9889518837444!2d12.645483208182013!3d47.0592613868166!2m3!1f54.00000000000015!2f76.13715763923128!3f0!3m2!1i1024!2i768!4f35!3m3!1m2!1s0x477712c196ca78c5%3A0x77a72d8b64cbc137!2sGro%C3%9Fglockner!5e1!3m2!1sde!2sat!4v1632341077030!5m2!1sde!2sat"
-            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-
     <!-- tiktok -->
     <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@diego_forn22/video/6981095853092015366"
                 data-video-id="6981095853092015366" style="max-width: 605px;min-width: 325px;">
@@ -129,16 +141,6 @@
         </section>
     </blockquote>
     <script async src="https://www.tiktok.com/embed.js"></script>
-
-    <!-- youtube -->
-    <iframe title="YouTube video player" src="https://www.youtube.com/embed/8JclYxF-8Hw?enablejsapi=1" width="560"
-            height="315" frameborder="0" allowfullscreen="allowfullscreen"
-            data-publishing-video-id="a9f69f55-8547-4043-8bad-e8d310d223dd" class="contentgarden-video-youtube-iframe"
-            id="contentgarden-video-youtube-iframe-a9f69f55-8547-4043-8bad-e8d310d223dd"></iframe>
-
-    <!-- vimeo -->
-    <iframe src="https://player.vimeo.com/video/445394992?h=de3caefe1d&amp;byline=0&amp;portrait=0" width="640"
-            height="360" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
 </article>
 </body>
 </html>
