New: FB embed types provided

--- a/index.html
+++ b/index.html
@@ -6,11 +6,23 @@
 </head>
 <body>
 <article style="max-width: 615px; margin: auto">
-    <!-- facebook -->
+    <!-- facebook video example (from campaign) -->
     <iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2Funiladmag%2Fvideos%2F3191766804384894%2F&show_text=false&width=380&t=0"
             width="380" height="476" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
             allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
             allowFullScreen="true"></iframe>
+
+    <!-- facebook post example (from fb docs) -->
+    <!--    <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2F20531316728%2Fposts%2F10154009990506729%2F&width=500&show_text=true&height=274&appId"-->
+    <!--            width="500" height="274" style="border:none;overflow:hidden" scrolling="no" frameborder="0"-->
+    <!--            allowfullscreen="true"-->
+    <!--            allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>-->
+
+    <!-- facebook comment example (from fb docs) -->
+    <!--    <iframe src="https://www.facebook.com/plugins/comment_embed.php?href=https%3A%2F%2Fwww.facebook.com%2Fzuck%2Fposts%2F10102577175875681%3Fcomment_id%3D1193531464007751%26reply_comment_id%3D654912701278942&width=560&include_parent=false&height=0&appId"-->
+    <!--            width="560" height="0" style="border:none;overflow:hidden" scrolling="no" frameborder="0"-->
+    <!--            allowfullscreen="true"-->
+    <!--            allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>-->
 
     <!-- pinterest -->
     <iframe src="https://assets.pinterest.com/ext/embed.html?id=473652085815926486" height="564" width="345"
