New: Pinterest documented

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
     <!--            allowfullscreen="true"-->
     <!--            allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>-->
 
-    <!-- pinterest -->
+    <!-- pinterest pin example (from campaign)
+         Note: pinterest also has a concept of boards and profiles but I couldn't find examples of iframe embeds, only
+         script based ones -> https://developers.pinterest.com/tools/widget-builder/?type=board&boardHeight=240&boardWidth=400&imageWidth=80&template=square
+         they are probably not used much.
+    -->
     <iframe src="https://assets.pinterest.com/ext/embed.html?id=473652085815926486" height="564" width="345"
             frameborder="0" scrolling="no"></iframe>
 
