New: Spotify documented

--- a/index.html
+++ b/index.html
@@ -32,10 +32,22 @@
     <iframe src="https://assets.pinterest.com/ext/embed.html?id=473652085815926486" height="564" width="345"
             frameborder="0" scrolling="no"></iframe>
 
-    <!-- spotify -->
+    <!-- spotify playlist example (from campaign) -->
     <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1E35dgo3JpZ5km" width="100%" height="80"
             allowfullscreen=""
             allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+
+    <!-- spotify album example (from docs) -->
+    <!--    <iframe src="https://open.spotify.com/embed/album/1DFixLWuPkv3KT3TnV35m3" width="300" height="380" frameborder="0"-->
+    <!--            allowtransparency="true" allow="encrypted-media"></iframe>-->
+
+    <!-- spotify song example (from spotify) -->
+    <!--    <iframe src="https://open.spotify.com/embed/track/3WkibOpDF7cQ5xntM1epyf" width="100%" height="380" frameBorder="0"-->
+    <!--            allowtransparency="true" allow="encrypted-media"></iframe>-->
+
+    <!-- spotify artist example (from spotify) -->
+    <!--    <iframe src="https://open.spotify.com/embed/artist/5EvFsr3kj42KNv97ZEnqij" width="100%" height="380" frameBorder="0"-->
+    <!--            allowtransparency="true" allow="encrypted-media"></iframe>-->
 
     <!-- apple music -->
     <iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="450"
