--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!--    <iframe src="https://open.spotify.com/embed/artist/5EvFsr3kj42KNv97ZEnqij" width="100%" height="380" frameBorder="0"-->
     <!--            allowtransparency="true" allow="encrypted-media"></iframe>-->
 
-    <!-- apple music -->
+    <!-- apple music (can't easily access - assuming it follows the pattern of embed.music.apple... ) -->
     <iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="450"
             style="width:100%;max-width:660px;overflow:hidden;background:transparent;"
             sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
