New: Google maps documented

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
             sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
             src="https://embed.music.apple.com/at/playlist/hyped/pl.914196c8783d46a5ba46f38eda448a43"></iframe>
 
-    <!-- google maps -->
+    <!-- google maps (always starts with maps/embed/, only parameters change)
+         https://developers.google.com/maps/documentation/embed/embedding-map
+    -->
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1920.9889518837444!2d12.645483208182013!3d47.0592613868166!2m3!1f54.00000000000015!2f76.13715763923128!3f0!3m2!1i1024!2i768!4f35!3m3!1m2!1s0x477712c196ca78c5%3A0x77a72d8b64cbc137!2sGro%C3%9Fglockner!5e1!3m2!1sde!2sat!4v1632341077030!5m2!1sde!2sat"
             width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
