New: Youtube documented

--- a/index.html
+++ b/index.html
@@ -61,11 +61,18 @@
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1920.9889518837444!2d12.645483208182013!3d47.0592613868166!2m3!1f54.00000000000015!2f76.13715763923128!3f0!3m2!1i1024!2i768!4f35!3m3!1m2!1s0x477712c196ca78c5%3A0x77a72d8b64cbc137!2sGro%C3%9Fglockner!5e1!3m2!1sde!2sat!4v1632341077030!5m2!1sde!2sat"
             width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
-    <!-- youtube -->
+    <!-- youtube video example (from campaign) -->
     <iframe title="YouTube video player" src="https://www.youtube.com/embed/8JclYxF-8Hw?enablejsapi=1" width="560"
             height="315" frameborder="0" allowfullscreen="allowfullscreen"
             data-publishing-video-id="a9f69f55-8547-4043-8bad-e8d310d223dd" class="contentgarden-video-youtube-iframe"
             id="contentgarden-video-youtube-iframe-a9f69f55-8547-4043-8bad-e8d310d223dd"></iframe>
+
+    <!-- youtube playlist example (from youtube - only video and playlist can be embedded) -->
+    <!--    <iframe width="560" height="315"-->
+    <!--            src="https://www.youtube.com/embed/videoseries?list=PLwiTZDxPg_I1lR23VnvBOomNXVvWF1K3Z"-->
+    <!--            title="YouTube video player" frameborder="0"-->
+    <!--            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"-->
+    <!--            allowfullscreen></iframe>-->
 
     <!-- vimeo -->
     <iframe src="https://player.vimeo.com/video/445394992?h=de3caefe1d&amp;byline=0&amp;portrait=0" width="640"
