--- a/index.html
+++ b/index.html
@@ -74,9 +74,15 @@
     <!--            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"-->
     <!--            allowfullscreen></iframe>-->
 
-    <!-- vimeo -->
+    <!-- vimeo video example (from campaign) -->
     <iframe src="https://player.vimeo.com/video/445394992?h=de3caefe1d&amp;byline=0&amp;portrait=0" width="640"
             height="360" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+
+    <!-- vimeo playlist example (from vimeo docs - only for premium vimeo users, probably not needed)
+         https://vimeo.zendesk.com/hc/en-us/articles/115007991707-Embeddable-playlists#h_01EKZM590HZMPDVGDY6GR58S2P
+    -->
+<!--    <iframe style="width: 100%; height: 100%;"-->
+<!--            src="https://vimeo.com/showcase/6137181/embed" frameborder="0" allowfullscreen=""></iframe>-->
 
     <!-- EMBEDS BELOW CONSIST OF MULTIPLE TAGS! -->
 
