--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
     <!-- vimeo playlist example (from vimeo docs - only for premium vimeo users, probably not needed)
          https://vimeo.zendesk.com/hc/en-us/articles/115007991707-Embeddable-playlists#h_01EKZM590HZMPDVGDY6GR58S2P
     -->
-<!--    <iframe style="width: 100%; height: 100%;"-->
-<!--            src="https://vimeo.com/showcase/6137181/embed" frameborder="0" allowfullscreen=""></iframe>-->
+    <!--    <iframe style="width: 100%; height: 100%;"-->
+    <!--            src="https://vimeo.com/showcase/6137181/embed" frameborder="0" allowfullscreen=""></iframe>-->
 
     <!-- EMBEDS BELOW CONSIST OF MULTIPLE TAGS! -->
 
-    <!-- soundcloud -->
+    <!-- soundcloud track example (from campaign) -->
     <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"
             src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/308686961&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
     <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
@@ -94,6 +94,15 @@
            style="color: #cccccc; text-decoration: none;">Steve Lacy</a> · <a
             href="https://soundcloud.com/steevlacy/3-dark-red" title="Dark Red" target="_blank"
             style="color: #cccccc; text-decoration: none;">Dark Red</a></div>
+
+    <!-- soundcloud playlist example (from soundcloud - only these two are available and are the same in fact from the perspective of targeting) -->
+    <!--    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"-->
+    <!--            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/302562083&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>-->
+    <!--    <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">-->
+    <!--        <a href="https://soundcloud.com/steevlacy" title="Steve Lacy" target="_blank"-->
+    <!--           style="color: #cccccc; text-decoration: none;">Steve Lacy</a> · <a-->
+    <!--            href="https://soundcloud.com/steevlacy/sets/steve-lacys-demo" title="Steve Lacy&#x27;s Demo" target="_blank"-->
+    <!--            style="color: #cccccc; text-decoration: none;">Steve Lacy&#x27;s Demo</a></div>-->
 
     <!-- twitter -->
     <blockquote class="twitter-tweet">
