New: Twitter documented

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <!--            href="https://soundcloud.com/steevlacy/sets/steve-lacys-demo" title="Steve Lacy&#x27;s Demo" target="_blank"-->
     <!--            style="color: #cccccc; text-decoration: none;">Steve Lacy&#x27;s Demo</a></div>-->
 
-    <!-- twitter -->
+    <!-- twitter tweet example (from campaign) -->
     <blockquote class="twitter-tweet">
         <p lang="de" dir="ltr">Die Krone hat ein kurzes Gespräch mit dem Bundeskanzler zu seiner Einvernahme beim
             Landesgericht am Rande der <a
@@ -115,6 +115,10 @@
             href="https://twitter.com/MartinThuer/status/1440759523266813952?ref_src=twsrc%5Etfw">September 22, 2021</a>
     </blockquote>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+    <!-- twitter timeline example (from twitter docs) -->
+    <!--    <a class="twitter-timeline" href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw">Tweets by TwitterDev</a>-->
+    <!--    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>-->
 
     <!-- instagram -->
     <blockquote class="instagram-media" data-instgrm-captioned
