New: Instagram documented

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <!--    <a class="twitter-timeline" href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw">Tweets by TwitterDev</a>-->
     <!--    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>-->
 
-    <!-- instagram -->
+    <!-- instagram (all of the embeds follow the same pattern - blockquote with .instagram-media) -->
     <blockquote class="instagram-media" data-instgrm-captioned
                 data-instgrm-permalink="https://www.instagram.com/p/CUDEBv-o4od/?utm_source=ig_embed&amp;utm_campaign=loading"
                 data-instgrm-version="13"
