New: Tiktok documented

--- a/index.html
+++ b/index.html
@@ -184,7 +184,13 @@
     </blockquote>
     <script async src="//www.instagram.com/embed.js"></script>
 
-    <!-- tiktok -->
+    <!-- tiktok video example (from campaign)
+         Note: Tiktok itself only offers video embeds. There are external services which provide
+         tiktok video feed embeds as well. We can ignore those, but it might be interesting to know:
+            https://www.sociablekit.com/how-to-embed-tiktok-on-website/
+            https://flockler.com/blog/display-tiktok-video-feed-on-website
+            ...
+    -->
     <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@diego_forn22/video/6981095853092015366"
                 data-video-id="6981095853092015366" style="max-width: 605px;min-width: 325px;">
         <section>
